[package]
name = "am-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.5.9"

[profile.release]
#debug = true
lto = true
codegen-units = 1
#opt-level = "s"
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
#opt-level = 0%